--- a/src/comps/RollDice.css
+++ b/src/comps/RollDice.css
@@ -1,3 +1,10 @@
+
+.board-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+
 .RollDice{
     display: flex;
     flex-flow: column nowrap;
@@ -34,4 +41,25 @@
     border-radius: 10px;
     background-color:#FA8072 !important;
     opacity:0.7;
+  }
+
+  .input {
+      width: 50%;
+      margin: auto;
+  }
+  
+  .reset {
+      margin-bottom: 10rem;
+  }
+
+  @media screen and (max-width: 800px) {
+    .RollDice-container{
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 0;
+    }
+
+    .board-container{
+        flex-direction: row;
+    }
   }
